--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,43 +1,74 @@
+*{
+    margin: 0;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    color: rgb(22, 21, 21);
 }
 
 a{
     text-decoration: none;
-    color: beige;
+    color: rgb(209, 119, 45);
 }
 
 header {
     display: flex;
     min-height: 40px;
-    background-color: rgb(49, 48, 48);
+    background-color: rgb(78, 74, 74);
     justify-content: space-between;
     align-items: center;
     padding-left: 3px;
     padding-top: 10px;
+    border-color:rgb(235, 18, 18);
+    
 
 }
 
+p{
+    color: black;
+}
 .logo{
     display: flex;
     align-items: center;
-    font-weight: 800;
-    color: white;
+    font-weight: 80px;
+    color: rgb(211, 175, 175);
 }
 nav a{
     font-weight: 10px;
     padding-right: 20px;
+
 }
 
 nav a:hover{
-    color: rgb(212, 108, 108);
+    color: rgb(219, 212, 171);
+
+}
+
+#fondo{
+    display: flex;
+    width: 1360px;
+    height: 350px;
+    background-image: url(/css/Evolucionuniverso.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    opacity: .8;
+
 
 }
 
 .logo img{
-    margin-right: 10px;
-    height: 80;
+    margin-left: 5px;
+    margin-top: 210px;
+    width: 150;
+    height: 150px;
+    size: 152px;
+    background-size: cover;
+    border-radius: 50%;
+    opacity: 12;
+    
     
 }
 @media (max-width:700px) {
